refactor(heading): refactor heading and add types for props

--- a/src/components/Heading/Heading.module.css
+++ b/src/components/Heading/Heading.module.css
@@ -1,7 +1,6 @@
 .heading {
-  background: brown;
-}
-
-.cyan {
-  color: cyan;
+  display: flex;
+  gap: 2.4rem;
+  align-items: center;
+  justify-content: center;
 }
