--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,7 +11,7 @@ html {
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 1.6rem; /* 16px */
+  font-size: 1.6rem;
   background: var(--gray-900);
   color: var(--text-default);
 }
