--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,3 +15,20 @@ body {
   background: var(--gray-900);
   color: var(--text-default);
 }
+
+a {
+  text-decoration: none;
+}
+
+.d-flex {
+  display: flex;
+
+  &.column {
+    flex-direction: column;
+  }
+
+  &.center {
+    align-items: center;
+    justify-content: center;
+  }
+}
