--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -7,4 +7,9 @@
   font-size: 4.2rem;
   font-weight: bold;
   color: var(--primary);
+  transition: all 0.1s ease-in-out;
+
+  &:hover {
+    filter: brightness(50%);
+  }
 }
