--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  outline: none;
 }
 
 html {
@@ -30,5 +31,9 @@ a {
   &.center {
     align-items: center;
     justify-content: center;
+  }
+
+  &.gap-medium {
+    gap: 1.8rem;
   }
 }
